# serializer version: 1
# name: test_setup_subentry[binary-device]
  dict({
    'binary_sensor.door_battery_note_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'binary_sensor.door_battery',
          }),
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery low',
          'note': 'Under the cover',
          'source_entity_id': '',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_note_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door sensor Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_note_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door sensor Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_note_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door sensor Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
# name: test_setup_subentry[binary-entity]
  dict({
    'binary_sensor.door_battery_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'binary_sensor.door_battery',
          }),
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery Battery low',
          'note': 'Under the cover',
          'source_entity_id': 'binary_sensor.door_battery',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door sensor Battery Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Battery Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door sensor Battery Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door sensor Battery Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
# name: test_setup_subentry[binary-standalone-entity]
  dict({
    'binary_sensor.door_battery_note_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'binary_sensor.door_battery',
          }),
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Door battery note Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door battery note Battery low',
          'note': 'Under the cover',
          'source_entity_id': 'binary_sensor.door_battery',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_note_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Door battery note Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door battery note Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_note_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Door battery note Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door battery note Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_note_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Door battery note Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door battery note Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
# name: test_setup_subentry[percentage-device]
  dict({
    'binary_sensor.door_battery_note_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery low',
          'note': 'Under the cover',
          'source_entity_id': '',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_note_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door sensor Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_note_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door sensor Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_note_battery_plus': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': dict({
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        }),
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': None,
        'entity_id': 'sensor.door_battery_note_battery_plus',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'sensor.door_battery',
          }),
          'sensor': dict({
            'suggested_display_precision': 1,
          }),
        }),
        'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery+',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus',
        'supported_features': 0,
        'translation_key': 'battery_plus',
        'unique_id': 'bn_door_battery_battery_plus',
        'unit_of_measurement': '%',
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported_level': 55.0,
          'battery_low': False,
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery+',
          'note': 'Under the cover',
          'source_entity_id': '',
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
          'unit_of_measurement': '%',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_plus',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '55.0',
      }),
    }),
    'sensor.door_battery_note_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door sensor Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
# name: test_setup_subentry[percentage-entity]
  dict({
    'binary_sensor.door_battery_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery Battery low',
          'note': 'Under the cover',
          'source_entity_id': 'sensor.door_battery',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door sensor Battery Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Battery Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door sensor Battery Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_battery_plus': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': dict({
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        }),
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': None,
        'entity_id': 'sensor.door_battery_battery_plus',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'sensor.door_battery',
          }),
          'sensor': dict({
            'suggested_display_precision': 1,
          }),
        }),
        'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Battery Battery+',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_plus',
        'supported_features': 0,
        'translation_key': 'battery_plus',
        'unique_id': 'bn_door_battery_battery_plus',
        'unit_of_measurement': '%',
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported_level': 55.0,
          'battery_low': False,
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door sensor Battery Battery+',
          'note': 'Under the cover',
          'source_entity_id': 'sensor.door_battery',
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
          'unit_of_measurement': '%',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_battery_plus',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '55.0',
      }),
    }),
    'sensor.door_battery_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Battery Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door sensor Battery Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
# name: test_setup_subentry[percentage-standalone-entity]
  dict({
    'binary_sensor.door_battery_note_battery_plus_low': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'binary_sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Door battery note Battery low',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus_low',
        'supported_features': 0,
        'translation_key': 'battery_low',
        'unique_id': 'bn_door_battery_battery_low',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door battery note Battery low',
          'note': 'Under the cover',
          'source_entity_id': 'sensor.door_battery',
        }),
        'context': <ANY>,
        'entity_id': 'binary_sensor.door_battery_note_battery_plus_low',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'off',
      }),
    }),
    'button.door_battery_note_battery_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'button',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_replaced_button',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Door battery note Battery replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_replaced',
        'supported_features': 0,
        'translation_key': 'battery_replaced',
        'unique_id': 'bn_door_battery_battery_replaced_button',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'friendly_name': 'Door battery note Battery replaced',
        }),
        'context': <ANY>,
        'entity_id': 'button.door_battery_note_battery_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': 'unknown',
      }),
    }),
    'sensor.door_battery_note_battery_last_replaced': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
        }),
        'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
        'original_icon': None,
        'original_name': 'Door battery note Battery last replaced',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_last_replaced',
        'supported_features': 0,
        'translation_key': 'battery_last_replaced',
        'unique_id': 'bn_door_battery_battery_last_replaced',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'device_class': 'timestamp',
          'friendly_name': 'Door battery note Battery last replaced',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_last_replaced',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2026-01-01T12:00:00+00:00',
      }),
    }),
    'sensor.door_battery_note_battery_plus': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': dict({
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        }),
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': None,
        'entity_id': 'sensor.door_battery_note_battery_plus',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'sensor.door_battery',
          }),
          'sensor': dict({
            'suggested_display_precision': 1,
          }),
        }),
        'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
        'original_icon': None,
        'original_name': 'Door battery note Battery+',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_plus',
        'supported_features': 0,
        'translation_key': 'battery_plus',
        'unique_id': 'bn_door_battery_battery_plus',
        'unit_of_measurement': '%',
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_increase_threshold': 25,
          'battery_last_replaced': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported': HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
          'battery_last_reported_level': 55.0,
          'battery_low': False,
          'battery_low_threshold': 15,
          'battery_quantity': 2,
          'battery_type': 'AA',
          'battery_type_and_quantity': '2× AA',
          'device_class': 'battery',
          'device_name': 'Door battery note',
          'friendly_name': 'Door battery note Battery+',
          'note': 'Under the cover',
          'source_entity_id': 'sensor.door_battery',
          'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
          'unit_of_measurement': '%',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_plus',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '55.0',
      }),
    }),
    'sensor.door_battery_note_battery_type': dict({
      'registry_entry': EntityRegistryEntrySnapshot({
        'aliases': list([
          None,
        ]),
        'area_id': None,
        'capabilities': None,
        'config_entry_id': <ANY>,
        'config_subentry_id': <ANY>,
        'device_class': None,
        'disabled_by': None,
        'domain': 'sensor',
        'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'has_entity_name': True,
        'hidden_by': None,
        'icon': None,
        'id': <ANY>,
        'labels': set({
        }),
        'name': None,
        'object_id_base': None,
        'options': dict({
          'battery_notes': dict({
            'entity_id': 'bn_door_battery_battery_type',
          }),
        }),
        'original_device_class': None,
        'original_icon': None,
        'original_name': 'Door battery note Battery type',
        'platform': 'battery_notes',
        'previous_unique_id': None,
        'suggested_object_id': 'door_battery_note_battery_type',
        'supported_features': 0,
        'translation_key': 'battery_type',
        'unique_id': 'bn_door_battery_battery_type',
        'unit_of_measurement': None,
      }),
      'state': StateSnapshot({
        'attributes': ReadOnlyDict({
          'battery_quantity': 2,
          'battery_type': 'AA',
          'friendly_name': 'Door battery note Battery type',
          'note': 'Under the cover',
        }),
        'context': <ANY>,
        'entity_id': 'sensor.door_battery_note_battery_type',
        'last_changed': <ANY>,
        'last_reported': <ANY>,
        'last_updated': <ANY>,
        'state': '2× AA',
      }),
    }),
  })
# ---
